--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -20,7 +20,8 @@
         "# Sentiment_Analysis\n",
         "#### By Rohit Suryavanshi\n",
         "Work Timeline doc: https://docs.google.com/document/d/1IXqmf_iipkzNDwZqWczPdeCnnNbQvESU1ktOREng1D0/edit?usp=sharing\n",
-        "Presentation: https://docs.google.com/presentation/d/1iujr5HFFG7RoXh1vfke5A5VJibRtduJY4-kik4-iZjs/edit?usp=sharing\n",
+        "\n",
+        "Presentation: https://drive.google.com/drive/folders/1epJOj19Mia-CTqPhs1F7RITyPyd6bODY?usp=sharing\n",
         "\n",
         "Github repo: https://github.com/rohitsurya26/WiDS-.git"
       ]
