--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -20,15 +20,14 @@
         "# Sentiment_Analysis\n",
         "#### By Rohit Suryavanshi\n",
         "Work Timeline doc: https://docs.google.com/document/d/1IXqmf_iipkzNDwZqWczPdeCnnNbQvESU1ktOREng1D0/edit?usp=sharing\n",
-        "\n",
-        "Presentation: https://drive.google.com/drive/folders/1epJOj19Mia-CTqPhs1F7RITyPyd6bODY?usp=sharing\n",
+        "Drive Folder: https://drive.google.com/drive/folders/1epJOj19Mia-CTqPhs1F7RITyPyd6bODY?usp=sharing\n",
         "\n",
         "Github repo: https://github.com/rohitsurya26/WiDS-.git"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "b72136d2",
       "metadata": {
         "scrolled": true,
@@ -36,7 +35,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dbb4df3c-4d42-40cc-8489-4f334a7b9c21"
+        "outputId": "9de2d3c8-45c5-400a-a6cb-e3c89a19e244"
       },
       "outputs": [
         {
@@ -119,14 +118,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V2nKAy0BABxn",
+        "outputId": "7de8fea5-318d-4164-813a-13b2a457aae0"
+      },
+      "id": "V2nKAy0BABxn",
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
       "id": "3edf589c",
       "metadata": {
         "id": "3edf589c"
       },
       "outputs": [],
       "source": [
-        "url = 'https://raw.githubusercontent.com/rohitsurya26/WiDS-/main/training.csv?token=GHSAT0AAAAAABQZ6QUIRAC5LYR25NLDXITWYPODPZQ'\n",
+        "url = '/content/drive/MyDrive/WiDS - Sentiment Analysis/training.csv'\n",
         "df = pd.read_csv(url)"
       ]
     },
@@ -149,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "f0064c08",
       "metadata": {
         "id": "f0064c08"
@@ -184,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "451df6ba",
       "metadata": {
         "id": "451df6ba"
@@ -199,7 +223,7 @@
         "        if punc in text:\n",
         "            text = text.replace(punc, ' ')\n",
         "    return text.strip()\n",
-        "df['punc_text']=df['text'].apply(remove_punctuation)"
+        "df['punc_text']=df['text'].apply(remove_punctuation, 1 )"
       ]
     },
     {
@@ -214,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "7a5f3fbf",
       "metadata": {
         "id": "7a5f3fbf"
@@ -237,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "065169bc",
       "metadata": {
         "id": "065169bc"
@@ -253,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "5fa1e5df",
       "metadata": {
         "id": "5fa1e5df"
@@ -281,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "864c2170",
       "metadata": {
         "id": "864c2170"
@@ -306,7 +330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "fa66d5dc",
       "metadata": {
         "id": "fa66d5dc"
@@ -330,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "7bab6fdc",
       "metadata": {
         "id": "7bab6fdc"
@@ -345,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "61c83cca",
       "metadata": {
         "id": "61c83cca"
@@ -373,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "53e4ac3a",
       "metadata": {
         "id": "53e4ac3a"
@@ -393,6 +417,18 @@
         "vocab=vectorizer.get_feature_names_out()\n",
         "vocab_size=len(vocab)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "gP-QdaTn7Q_-"
+      },
+      "id": "gP-QdaTn7Q_-",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -430,7 +466,7 @@
         "id": "leMYr31G7wsY"
       },
       "id": "leMYr31G7wsY",
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -446,7 +482,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B6R-tRrhaWRr",
-        "outputId": "62c78054-18a4-49aa-8290-100e8f8d9dd3"
+        "outputId": "9d23cc08-1a9c-4de8-f14b-060bd252723a"
       },
       "id": "B6R-tRrhaWRr",
       "execution_count": null,
@@ -464,7 +500,7 @@
     {
       "cell_type": "code",
       "source": [
-        "url='https://raw.githubusercontent.com/rohitsurya26/WiDS-/main/test.csv?token=GHSAT0AAAAAABQZ6QUJ4FG7Y2PHQUCDDDYOYPODQJA'\n",
+        "url='/content/drive/MyDrive/WiDS - Sentiment Analysis/test.csv'\n",
         "df_test=pd.read_csv(url)"
       ],
       "metadata": {
@@ -579,6 +615,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##### Trying to remove NaN from numpy array"
+      ],
+      "metadata": {
+        "id": "Ld3DRfTjAt7T"
+      },
+      "id": "Ld3DRfTjAt7T"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "6d7ed1f2",
@@ -649,27 +695,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b9714861-8d9a-4926-fd48-90b9d6dd3f3a"
+        "outputId": "648a484d-4810-486e-ade4-13167f064724"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"sequential_39\"\n",
+            "Model: \"sequential\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " embedding_39 (Embedding)    (None, 40, 45)            544860    \n",
+            " embedding (Embedding)       (None, 40, 45)            544860    \n",
             "                                                                 \n",
-            " conv1d_28 (Conv1D)          (None, 26, 32)            21632     \n",
+            " conv1d (Conv1D)             (None, 26, 32)            21632     \n",
             "                                                                 \n",
-            " global_average_pooling1d_34  (None, 32)               0         \n",
-            "  (GlobalAveragePooling1D)                                       \n",
+            " global_average_pooling1d (G  (None, 32)               0         \n",
+            " lobalAveragePooling1D)                                          \n",
             "                                                                 \n",
-            " dense_67 (Dense)            (None, 64)                2112      \n",
+            " dense (Dense)               (None, 64)                2112      \n",
             "                                                                 \n",
-            " dense_68 (Dense)            (None, 6)                 390       \n",
+            " dense_1 (Dense)             (None, 6)                 390       \n",
             "                                                                 \n",
             "=================================================================\n",
             "Total params: 568,994\n",
@@ -693,38 +739,34 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f5ef05b0-267b-49da-f3dc-7e759aa1b57b"
+        "outputId": "a20c0e1d-dba6-4905-9e21-4cc38eb16b1e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/5\n",
-            "16000/16000 [==============================] - 136s 8ms/step - loss: 0.9107 - accuracy: 0.6094\n",
-            "Epoch 2/5\n",
-            "16000/16000 [==============================] - 134s 8ms/step - loss: 0.3347 - accuracy: 0.8836\n",
-            "Epoch 3/5\n",
-            "16000/16000 [==============================] - 133s 8ms/step - loss: 0.1945 - accuracy: 0.9316\n",
-            "Epoch 4/5\n",
-            "16000/16000 [==============================] - 133s 8ms/step - loss: 0.1263 - accuracy: 0.9546\n",
-            "Epoch 5/5\n",
-            "16000/16000 [==============================] - 130s 8ms/step - loss: 0.0851 - accuracy: 0.9693\n"
+            "Epoch 1/3\n",
+            "16000/16000 [==============================] - 80s 5ms/step - loss: 0.7921 - accuracy: 0.6916\n",
+            "Epoch 2/3\n",
+            "16000/16000 [==============================] - 78s 5ms/step - loss: 0.2669 - accuracy: 0.9056\n",
+            "Epoch 3/3\n",
+            "16000/16000 [==============================] - 78s 5ms/step - loss: 0.1698 - accuracy: 0.9391\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7feed01ea710>"
+              "<keras.callbacks.History at 0x7f0b7a8bbf90>"
             ]
           },
           "metadata": {},
-          "execution_count": 244
+          "execution_count": 22
         }
       ],
       "source": [
-        "model.fit(x_train, y_train, epochs=5, batch_size=1,shuffle=True)"
+        "model.fit(x_train, y_train, epochs=3, batch_size=1,shuffle=True)"
       ]
     },
     {
@@ -736,16 +778,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "599932d3-4c64-4d6b-b71b-32c36172c888"
+        "outputId": "13b694d1-6d41-4ff9-b922-c68fe0cbb811"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "500/500 [==============================] - 2s 3ms/step - loss: 0.0431 - accuracy: 0.9845\n",
-            "Loss: 0.04306742548942566\n",
-            "Accuracy: 0.984499990940094\n"
+            "500/500 [==============================] - 1s 2ms/step - loss: 0.1129 - accuracy: 0.9596\n",
+            "Loss: 0.1129428893327713\n",
+            "Accuracy: 0.9595624804496765\n"
           ]
         }
       ],
@@ -1046,7 +1088,7 @@
         "kaggle['id']=pd.Series(k)\n",
         "kaggle['label']=pd.Series(submit)\n",
         "len(kaggle['id'])\n",
-        "kaggle.to_csv('submission_corrected.csv',index=False)\n",
+        "kaggle.to_csv('submission_NB.csv',index=False)\n",
         "\n",
         "## WITHOUT SCALING - 0.73400, IMPROVES BY 0.1\n",
         "## WITH SCALING, DOWN BY 0.01 FOR MAX ABS \n",
