--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -27,86 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "b72136d2",
       "metadata": {
         "scrolled": true,
-        "id": "b72136d2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9de2d3c8-45c5-400a-a6cb-e3c89a19e244"
+        "id": "b72136d2"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[nltk_data] Downloading collection 'popular'\n",
-            "[nltk_data]    | \n",
-            "[nltk_data]    | Downloading package cmudict to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/cmudict.zip.\n",
-            "[nltk_data]    | Downloading package gazetteers to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/gazetteers.zip.\n",
-            "[nltk_data]    | Downloading package genesis to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/genesis.zip.\n",
-            "[nltk_data]    | Downloading package gutenberg to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/gutenberg.zip.\n",
-            "[nltk_data]    | Downloading package inaugural to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/inaugural.zip.\n",
-            "[nltk_data]    | Downloading package movie_reviews to\n",
-            "[nltk_data]    |     /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/movie_reviews.zip.\n",
-            "[nltk_data]    | Downloading package names to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/names.zip.\n",
-            "[nltk_data]    | Downloading package shakespeare to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/shakespeare.zip.\n",
-            "[nltk_data]    | Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/stopwords.zip.\n",
-            "[nltk_data]    | Downloading package treebank to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/treebank.zip.\n",
-            "[nltk_data]    | Downloading package twitter_samples to\n",
-            "[nltk_data]    |     /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/twitter_samples.zip.\n",
-            "[nltk_data]    | Downloading package omw to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/omw.zip.\n",
-            "[nltk_data]    | Downloading package omw-1.4 to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/omw-1.4.zip.\n",
-            "[nltk_data]    | Downloading package wordnet to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/wordnet.zip.\n",
-            "[nltk_data]    | Downloading package wordnet2021 to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/wordnet2021.zip.\n",
-            "[nltk_data]    | Downloading package wordnet31 to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/wordnet31.zip.\n",
-            "[nltk_data]    | Downloading package wordnet_ic to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/wordnet_ic.zip.\n",
-            "[nltk_data]    | Downloading package words to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora/words.zip.\n",
-            "[nltk_data]    | Downloading package maxent_ne_chunker to\n",
-            "[nltk_data]    |     /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping chunkers/maxent_ne_chunker.zip.\n",
-            "[nltk_data]    | Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping tokenizers/punkt.zip.\n",
-            "[nltk_data]    | Downloading package snowball_data to\n",
-            "[nltk_data]    |     /root/nltk_data...\n",
-            "[nltk_data]    | Downloading package averaged_perceptron_tagger to\n",
-            "[nltk_data]    |     /root/nltk_data...\n",
-            "[nltk_data]    |   Unzipping taggers/averaged_perceptron_tagger.zip.\n",
-            "[nltk_data]    | \n",
-            "[nltk_data]  Done downloading collection popular\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
-        }
-      ],
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -118,39 +45,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "V2nKAy0BABxn",
-        "outputId": "7de8fea5-318d-4164-813a-13b2a457aae0"
-      },
-      "id": "V2nKAy0BABxn",
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "id": "3edf589c",
       "metadata": {
         "id": "3edf589c"
       },
       "outputs": [],
       "source": [
-        "url = '/content/drive/MyDrive/WiDS - Sentiment Analysis/training.csv'\n",
+        "url = 'https://raw.githubusercontent.com/rohitsurya26/WiDS-/main/training.csv'\n",
         "df = pd.read_csv(url)"
       ]
     },
@@ -173,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "f0064c08",
       "metadata": {
         "id": "f0064c08"
@@ -208,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "451df6ba",
       "metadata": {
         "id": "451df6ba"
@@ -238,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "7a5f3fbf",
       "metadata": {
         "id": "7a5f3fbf"
@@ -261,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "065169bc",
       "metadata": {
         "id": "065169bc"
@@ -277,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "5fa1e5df",
       "metadata": {
         "id": "5fa1e5df"
@@ -305,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "864c2170",
       "metadata": {
         "id": "864c2170"
@@ -330,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "fa66d5dc",
       "metadata": {
         "id": "fa66d5dc"
@@ -354,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "7bab6fdc",
       "metadata": {
         "id": "7bab6fdc"
@@ -369,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "61c83cca",
       "metadata": {
         "id": "61c83cca"
@@ -397,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "53e4ac3a",
       "metadata": {
         "id": "53e4ac3a"
@@ -466,7 +368,7 @@
         "id": "leMYr31G7wsY"
       },
       "id": "leMYr31G7wsY",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -500,7 +402,7 @@
     {
       "cell_type": "code",
       "source": [
-        "url='/content/drive/MyDrive/WiDS - Sentiment Analysis/test.csv'\n",
+        "url='https://raw.githubusercontent.com/rohitsurya26/WiDS-/main/test.csv'\n",
         "df_test=pd.read_csv(url)"
       ],
       "metadata": {
@@ -1052,7 +954,7 @@
       },
       "outputs": [],
       "source": [
-        "df_test=pd.read_csv('test.csv')\n",
+        "df_test=pd.read_csv('https://raw.githubusercontent.com/rohitsurya26/WiDS-/main/test.csv')\n",
         "## REMOVE PUNCTUATION\n",
         "df_test['text']=df_test['text'].apply(remove_punctuation)\n",
         "## TOKENISATION\n",
